--- a/RMUser/packages.config
+++ b/RMUser/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="angularjs" version="1.4.0" targetFramework="net452" />
+  <package id="angularjs" version="1.4.1" targetFramework="net452" />
   <package id="angularjs.TypeScript.DefinitelyTyped" version="3.9.5" targetFramework="net452" />
   <package id="bootstrap" version="3.3.4" targetFramework="net452" />
   <package id="jQuery" version="2.1.4" targetFramework="net452" />
   <package id="jquery.TypeScript.DefinitelyTyped" version="2.2.5" targetFramework="net452" />
+  <package id="linq.js" version="2.2.0.2" targetFramework="net452" />
+  <package id="linq.TypeScript.DefinitelyTyped" version="0.1.8" targetFramework="net452" />
 </packages>
